// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Tokens/Decisions/Color Background Color 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#2B2351",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-dark-background
      </span>
      <span
        className="label"
      >
        #2B2351
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#F5F5F5",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-light-background
      </span>
      <span
        className="label"
      >
        #F5F5F5
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Decisions/Color Button Color With Background Dark 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "#2B2351",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#716181",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-button-primary
      </span>
      <span
        className="label"
      >
        #716181
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#C91280",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-button-secondary
      </span>
      <span
        className="label"
      >
        #C91280
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-button-base
      </span>
      <span
        className="label"
      >
        transparent
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Decisions/Color Button Color With Background Light 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "#F5F5F5",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#716181",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-button-primary
      </span>
      <span
        className="label"
      >
        #716181
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#C91280",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-button-secondary
      </span>
      <span
        className="label"
      >
        #C91280
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "transparent",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-button-base
      </span>
      <span
        className="label"
      >
        transparent
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Decisions/Color Default 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "",
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": undefined,
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-primary
      </span>
      <span
        className="label"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Decisions/Color Font Color With Background Dark 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "#2B2351",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#fff",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-font-base
      </span>
      <span
        className="label"
      >
        #fff
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#EDEDED",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-font-muted
      </span>
      <span
        className="label"
      >
        #EDEDED
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Tokens/Decisions/Color Font Color With Background Light 1`] = `
<div
  style={
    Object {
      "alignContent": "flex-start",
      "background": "#F5F5F5",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": "10px 30px",
      "height": "100%",
      "justifyContent": "flex-start",
      "maxHeight": 250,
      "padding": "2em",
    }
  }
>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#000",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-font-base
      </span>
      <span
        className="label"
      >
        #000
      </span>
    </div>
  </div>
  <div
    className="container"
  >
    <div
      className="color"
      style={
        Object {
          "backgroundColor": "#706080",
        }
      }
    />
    <div
      className="description"
    >
      <span
        className="label"
      >
        --color-font-muted
      </span>
      <span
        className="label"
      >
        #706080
      </span>
    </div>
  </div>
</div>
`;
